<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:layout_width="wrap_content">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="atmempresaconsultoria.livroandroid.com.contservice.QuemSomosActivity">


    //logomarca contservice



    <ImageView
        android:id="@+id/logoId"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo01"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="23dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logoId"
        android:layout_alignRight="@+id/logoId"
        android:layout_alignEnd="@+id/logoId"
        android:id="@+id/linearLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:src="@drawable/icone07" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Sobre Nós"
            android:id="@+id/textView6"
            android:layout_gravity="center_horizontal"
            android:textSize="22dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/sobrenos"
            android:id="@+id/sobrenosId"
            android:layout_gravity="center_horizontal"
            android:textColor="#040404"
            android:background="#afc0fd" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/icone06" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nossamissao"
        android:id="@+id/textView7"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:textColor="#040404"
        android:layout_alignTop="@+id/imageView8"
        android:layout_toRightOf="@+id/imageView8"
        android:layout_toEndOf="@+id/imageView8"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/nossamissaotexto"
        android:id="@+id/textView8"
        android:textColor="#030303"
        android:layout_below="@+id/imageView8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#f9516a" />


</RelativeLayout>

</ScrollView>
